--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,70 +4,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="ui.activity.ModsActivity"
+    tools:context="ui.activity.SettingsActivity"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/mods_toolbar"
+        android:id="@+id/settings_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-
+<!--
     <com.google.android.material.tabs.TabLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:tabTextAppearance="@style/MyCustomTextAppearance"
-        android:id="@+id/tabLayout"
-        app:tabMode="scrollable">
+        android:id="@+id/settings_tabLayout">
 
         <com.google.android.material.tabs.TabItem
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            android:text="@string/tab_plugins"/>
+            android:text="tab 2"/>
 
         <com.google.android.material.tabs.TabItem
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
-            android:text="@string/tab_resources"/>
+            android:text="tab 1"/>
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:text="@string/tab_dirs"/>
 
-        <com.google.android.material.tabs.TabItem
-            android:layout_height="match_parent"
-            android:layout_width="wrap_content"
-            android:text="@string/tab_groundcover"/>
     </com.google.android.material.tabs.TabLayout>
 
     <ViewFlipper
-        android:id="@+id/flipper"
+        android:id="@+id/settings_flipper"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_mods"
+            android:id="@+id/list_1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_resources"
+            android:id="@+id/list_2"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_dirs"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_groundcovers"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </ViewFlipper>
+-->
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <FrameLayout
+                android:id="@+id/settings_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+
+                />
+
+        </FrameLayout>
 
 </LinearLayout>
